# strands-env

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/commands/: create-env.md  run-integration-tests.md  write-eval-readme.md
.github/workflows/: publish.yml  test.yml
docs/: evaluation.md  rl-training.md
docs/plans/: 2026-02-15-synthetic-evaluator-design.md  2026-02-15-synthetic-evaluator-plan.md
examples/: bedrock_judge_demo.py  calculator_demo.py
examples/eval/agent_world_model/: env_hook.py
examples/eval/aime_code/: README.md  code_sandbox_env.py
examples/eval/browsecomp/: README.md  chat_env.py
examples/eval/frames/: chat_env.py
examples/eval/simple_math/: README.md  calculator_env.py  simple_math_evaluator.py
examples/eval/simpleqa_verified/: README.md  chat_env.py
examples/eval/terminal_bench/: README.md  terminal_bench_env.py
examples/evaluators/: simple_math_evaluator.py
examples/slime/retool/: README.md  generate_with_code_sandbox.py  run_retool_qwen3_8b.sh
src/strands_env/: __init__.py  task.md
src/strands_env/cli/: __init__.py  config.py  eval.py  utils.py
src/strands_env/core/: __init__.py  action.py  environment.py  model.py  models.py  observation.py  reward.py  types.py  utils.py
src/strands_env/environments/agent_world_model/: README.md  __init__.py  data_loader.py  db.py  env.py  requirements.txt  reward.py  system_prompt.md  tools.py
src/strands_env/environments/calculator/: README.md  env.py
src/strands_env/environments/code_sandbox/: README.md  env.py
src/strands_env/environments/mcp/: README.md  __init__.py  env.py  system_prompt.md  tool.py
src/strands_env/environments/mcp_atlas/: README.md  env.py
src/strands_env/environments/synthetic_env/: __init__.py  data_loader.py  db.py  env.py  env_hook.py  reward.py  tools.py
src/strands_env/environments/terminal_bench/: README.md  __init__.py  env.py  requirements.txt  reward.py
src/strands_env/environments/web_search/: README.md  __init__.py  env.py  system_prompt.md
src/strands_env/eval/: __init__.py  aime.py  evaluator.py  registry.py
src/strands_env/eval/benchmarks/: agent_world_model.py  aime.py  browsecomp.py  frames.py  simpleqa_verified.py  synthetic.py  terminal_bench.py
src/strands_env/rewards/: __init__.py  llm_judge_reward.py  math_verify_reward.py
src/strands_env/tools/: __init__.py  code_interpreter.py  google_search.py  web_scraper.py  web_search.py
src/strands_env/utils/: __init__.py  aws.py  decorators.py  loader.py  sglang.py
tests/: conftest.py
tests/integration/: __init__.py  conftest.py  test_code_sandbox.py  test_math_env.py  test_synthetic_env.py  test_web_search.py
tests/unit/: test_aws.py  test_environment.py  test_eval.py  test_math_reward.py  test_models.py  test_registry.py  test_synthetic_env.py  test_synthetic_evaluator.py  test_types.py
tests/unit/tools/: test_code_interpreter.py
