[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strands-env"
version = "0.2.1.dev0"
description = "Standardizing environment infrastructure with Strands Agents — step, observe, reward."
authors = [{name = "Yuan He", email = "yuanhe.cs.ai@gmail.com"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "strands-sglang",
    "strands-agents-tools",
    "datasets",
    "math-verify>=0.8.0",
    "click>=8.0.0",
    "tqdm>=4.0.0",
]

[project.scripts]
strands-env = "strands_env.cli:main"

[project.optional-dependencies]
litellm = ["strands-agents[litellm]"]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    # Linting & Build
    "pre-commit",
    "ruff>=0.1.0",
    "twine>=4.0.0",
    "build>=0.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/strands_env"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
